# AoC-

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  compile_commands.json
aoc2019/: BUILD  day10.cpp
aoc2024/: BUILD  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp
tools/: BUILD  all.h  io.cpp  io.h  io_test.cpp  log.cpp  log.h  main.cpp  main.h
tools/math/: BUILD  vec2.cpp  vec2.h  vec2_test.cpp
