http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

bazel_dep(name = "abseil-cpp", version = "20240116.2")
bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)

git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "f5fbd4cee671d8d908f37c83abaf70fba5928fc7",
)

http_archive(
    name = "gif-h",
    url = "https://github.com/charlietangora/gif-h/archive/refs/heads/master.zip",
    integrity = "sha256-U4TjUJQX+0GOCvxFQSAmo6xxxTu1qE/GH/dSf620f58=",
    build_file = "@//:third_party/gif/gif-h.BUILD",
    strip_prefix = "gif-h-master",
    add_prefix = "gif",
)